@@ -6,7 +6,7 @@ use warnings;
 
 BEGIN {
 	$Type::Library::AUTHORITY = 'cpan:TOBYINK';
-	$Type::Library::VERSION   = '1.003_001';
+	$Type::Library::VERSION   = '1.003_002';
 }
 
 use Eval::TypeTiny qw< eval_closure >;
