@@ -10,7 +10,7 @@ BEGIN {
 
 BEGIN {
 	$Types::Common::Numeric::AUTHORITY = 'cpan:TOBYINK';
-	$Types::Common::Numeric::VERSION   = '1.003_001';
+	$Types::Common::Numeric::VERSION   = '1.003_002';
 }
 
 use Type::Library -base, -declare => qw(
